packages/docs/content/4.0/api/CFormTextarea.api.mdx

```jsx
import { CFormTextarea } from '@coreui/react'
// or
import CFormTextarea from '@coreui/react//Users/lukaszholeczek/CoreUI/@coreui/react/packages/coreui-react/src/components/form/CFormTextarea'
```

| Property | Description | Type | Default |
| --- | --- | --- | --- |
| **className** | A string of all className you want applied to the component. | `string` | - |
| **disabled** | Toggle the disabled state for the component. | `boolean` | - |
| **invalid** | Set component validation state to invalid. | `boolean` | - |
| **onChange** | Method called immediately after the `value` prop changes. | `ChangeEventHandler<HTMLTextAreaElement>` | - |
| **plainText** | Render the component styled as plain text. Removes the default form field styling and preserve the correct margin and padding. Recommend to use only along side `readonly`. | `boolean` | - |
| **readOnly** | Toggle the readonly state for the component. | `boolean` | - |
| **valid** | Set component validation state to valid. | `boolean` | - |
| **value** | The `value` attribute of component.<br/>@controllable onChange | `string` \| `number` \| `string[]` | - |
